Added more functionality
I started having a little fun with it so I added the clear function to improve the UX. I also figured it needed a squared and with that I decided it needed a square root function

--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,10 @@ h2 {
     background-color: orange;
     padding: 1rem;
 }
+
+.clear {
+    display: flex;
+    justify-content: center;
+    padding-top: 3rem;
+    font-size: larger;
+}
